Ch 3 nearly done?

--- a/latex/chapter-appendix2.tex
+++ b/latex/chapter-appendix2.tex
@@ -11,7 +11,7 @@ Some of these may install other dependencies in turn.
 
 Web Components\index{Web Components} polyfill\index{polyfill}, core library, Core Elements\index{Core Elements} and Paper Elements\index{Paper Elements}.
 \item Firebase\index{Firebase} database service and client library~\cite{firebasecontributors2015}
-\item Marked\index{Marked library} library
+\item Marked\index{Marked library} library~\cite{christopherjeffrey2014}
 \item highlight.js\index{highlight.js library} library
 \item i18next\index{i18next library} library
 \item moment.js\index{moment.js library} library
