--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -4,19 +4,25 @@
 
 
 \section{Layout and Structure}
-Speakur\index{Speakur} is delivered as a single Custom Element\index{Custom Element}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
+\label{sec:layout}
+
+Speakur\index{Speakur} is delivered as a single Custom Element\index{Custom Elements}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
 You must import the tag with \tcode{<link rel=import href=...>} tag to make it available to place on the page. 
 This element has a \tcode{<template>}\index{<template>} that 
 
 \section{Database Design}
+\label{sec:database}
 
 \section{Synchronization}
+\label{sec:sync}
 
 \subsection{Data Bindings}
+\label{sec:databindings}
 
 \subsection{Data-Bound Templates}
 
 \section{Security}
+\label{sec:security}
 
 \subsection{Authentication}
 
@@ -24,10 +30,13 @@ This element has a \tcode{<template>}\index{<template>} that
 \label{sec:security}
 
 \section{Internationalization}
+\label{sec:i18n}
+
 \subsection{Architecture}
 \subsection{Libraries}
 
 \section{Responsive Design}
+\label{sec:responsive}
 
 \subsection{Mobile Users}
 
