--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -19,7 +19,7 @@
 	isbn = {9780133065213},
 	url = {http://books.google.com/books?id=vqTfNFDzzdIC},
 	publisher = {Pearson Education},
-	author = {Fowler, M.},
+	author = {Fowler, Martin},
 	year = {2012}
 },
 
@@ -368,7 +368,7 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	isbn = {9780133962376},
 	url = {http://books.google.com/books?id=UEOZBAAAQBAJ},
 	publisher = {Pearson Education},
-	author = {Dickey, J.},
+	author = {Dickey, Jeff},
 	year = {2014}
 },
 
@@ -612,4 +612,43 @@ the community can benefit from them as well.},
 	month = mar,
 	year = {2015},
 	howpublished = {https://medium.com/@slsoftworks/javascript-world-domination-af9ca2ee5070}
+},
+
+@online{polymercontributors2015-a,
+	title = {Vulcanize},
+	url = {https://github.com/polymer/vulcanize},
+	abstract = {Concatenate a set of Web Components into one file.
+
+Named for the Vulcanization process that turns polymers into more durable materials.},
+	author = {Polymer contributors},
+	month = mar,
+	year = {2015},
+	howpublished = {https://github.com/polymer/vulcanize}
+},
+
+@book{crockford2008,
+	title = {{JavaScript:} The Good Parts},
+	isbn = {9780596554873},
+	publisher = {{O'Reilly} Media, Inc.},
+	author = {Crockford, Douglas},
+	year = {2008}
+},
+
+@online{mozillacontributors2015-b,
+	title = {Same Origin Policy},
+	url = {https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy},
+	abstract = {The same-origin policy restricts how a document or script loaded from one origin can interact with a resource from another origin. Same-origin Policy is used as a means to prevent some of the Cross-site Request Forgery attacks.},
+	author = {Mozilla contributors},
+	month = feb,
+	year = {2015},
+	howpublished = {{https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin\_policy}}
+},
+
+@online{christopherjeffrey2014,
+	title = {Marked library},
+	url = {https://github.com/chjj/marked},
+	author = {Christopher Jeffrey},
+	month = dec,
+	year = {2014},
+	howpublished = {https://github.com/chjj/marked}
 }
