--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -20,22 +20,22 @@ As shown in Listing~\ref{l:example1},
 and in section \ref{publishing} below,
 you simply place the \tcode{<speakur-discussion>}\index{<speakur-discussion>}
  element in your page's HTML\index{HTML} at the desired spot.
-This requires two supporting steps detailed in section \ref{publishing}:
+This requires two supporting steps detailed in section~\ref{publishing}:
 \begin{enumerate}
 \item loading the Web Components\index{Web Components} polyfill\index{polyfill} script
 \item importing the \tcode{<speakur-discussion>}\index{<speakur-discussion>} element.
 \end{enumerate}
 
-Once an author imports the element and places it on their page, that site now has an integrated discussion forum that works equally well for desktop and mobile\index{mobile} users. 
+Once an author imports the element and places it on their page, that site now has an integrated discussion forum for desktop and mobile\index{mobile} users. 
 All forum data including user profiles and comment text is stored in an online cloud database called Firebase~\cite{firebasecontributors2015}\index{Firebase}.
 The messy details of structuring a discussion forum are abstracted\index{abstraction} away from the web page author.
 
 \tcode{<speakur-discussion>}\index{<speakur-discussion>} presents a simplified interface (API)\index{API} to users.
-There are only a few options to set including the URL of the Firebase instance and the thread target URL or \tcode{href}\index{href}.
+There are only a few options available including the URL of the Firebase instance and the thread target URL or \tcode{href}\index{href}.
 If you do not provide your own a Firebase\index{Firebase} URL, by default, my resource-limited database is used instead.
 Therefore serious users will wish to use their own Firebase account with their own database.
 
-In addition to basic commenting features, Speakur offers the ability to vote comments up or down, custom profiles, 
+In addition to basic commenting features, Speakur\index{Speakur} offers the ability to vote comments up or down, custom profiles, 
 the ability to leave comments in Markdown\index{Markdown} syntax~\cite{githubcontributors2015} with syntax highlighting\index{syntax highlighting} for common programming languages, 
 and (rough) user interface translations 
 (localizations\index{localization}\index{internationalization}) 
@@ -65,9 +65,9 @@ Roy Fielding, the author of the influential REST\index{REST} web architecture\in
 At the heart of software architecture is the principle of abstraction: hiding some of the details of a system through encapsulation\index{encapsulation} in order to better identify and sustain its properties. A complex system will contain many levels of abstraction, each with its own architecture~\cite{fielding2000}.
 \end{quote}
 
-The architecture for Speakur\index{Speakur} is based on client-side (browser) JavaScript\index{JavaScript} code and HTML\index{HTML} layout following Web Components\index{Web Components} design principles from section~\ref{sec:wcprinciples} below. 
+The architecture for Speakur\index{Speakur} is based on client-side (browser) JavaScript\index{JavaScript} code and HTML\index{HTML} layout following the Web Components\index{Web Components} design principles listed in section~\ref{sec:wcprinciples} below. 
 There is no dedicated server component except for the Firebase\index{Firebase} cloud database service~\cite{firebasecontributors2015}.
-Speakur is built entirely from plain HTML, JS and CSS\index{CSS} files that can be served from a content distribution network (CDN)\index{content distribution network (CDN)} 
+Speakur is built entirely from plain HTML, JS and CSS\index{CSS} files that can be served from a content delivery network (CDN)\index{content delivery network (CDN)} 
 such as \tcode{github.io}\index{GitHub} or your own server~\cite{landers2015-d}.
 
 This low-overhead design allows Speakur\index{Speakur} to be used on your own website without actually `installing' any software;
@@ -82,23 +82,52 @@ Most of the user interface\index{user interface (UI)} elements in Speakur\index{
 --- are implemented with Polymer's\index{Polymer} Core\index{Core Elements} and Paper\index{Paper Elements} custom element libraries.
 Speakur presents a simple API through \tcode{<speakur-discussion>}\index{<speakur-discussion>},
 but internally it consists of a number of internal abstraction layers or custom elements.
-In turn, these internal layers consist of still more focused layers, other Polymer components, simple HTML templates, and wrappers around external JavaScript\index{JavaScript} libraries like  \tcode{moment.js}\index{moment.js library}.
+In turn, these internal layers consist of still more focused layers, other Polymer\index{Polymer} components, 
+simple HTML templates, 
+and wrappers around external JavaScript\index{JavaScript} libraries 
+like \tcode{moment.js}\index{moment.js library}.
+These internal layers are described in section~\ref{sec:layout}.
 
 As previously mentioned, in order to make the 
-\tcode{<speakur-discussion>}\index{<speakur-discussion>} element available for use, you must first load the Web Components polyfill\index{polyfill} and then \textit{import} the Speakur element, either from \tcode{github.io} or your own server.
+\tcode{<speakur-discussion>}\index{<speakur-discussion>} element available for use, 
+you must first load the Web Components polyfill\index{polyfill} and then \textit{import} the Speakur element, 
+either from \tcode{github.io} or your own server.
 It is recommended to create your own Firebase\index{Firebase} instance for data security and resource limitation reasons, but even this is not required. 
 The author's demonstration database will be used by default.
 
-Security\index{security} for web clients engaging in data manipulation (i.e, posting, editing or deleting comments) is handled entirely through Firebase\index{Firebase} authentication\index{authentication} and data security\index{security} rules described below.
-The simplicity of this arrangement means that it is extremely easy to fit Speakur into almost any web application architecture.
+Security\index{security} for web clients engaging in data manipulation 
+(i.e, posting, editing or deleting comments) 
+is handled entirely through the Firebase\index{Firebase} authentication\index{authentication} 
+and data security\index{security} rules described below.
+The simplicity of this arrangement makes it easier to fit Speakur\index{Speakur} into almost any web application architecture\index{architecture}.
 
 \section{Responsive Design}
+Although `native' apps are frequently preferred by mobile users and developers, 
+the mobile web remains an important development platform for the same reason that 
+desktop web apps live alongside native desktop apps; 
+web apps typically do not require installing anything to the device, are always up-to-date, and have a lower barrier to entry overall.
 Because Speakur\index{Speakur} is not a standalone application but rather a plug-in designed to be embedded into other web pages or apps, 
 the full document is not under its control.
 This can affect the mobile\index{mobile} user experience\index{user experience (UX)},
 but within these limits, Speakur strives to present a responsive\index{responsive design} interface to different screen sizes.
 
-The primary way it does this is...
+\begin{figure}[htb]
+\centering
+ \includegraphics[width=3in]{images/mobile2.png}
+\caption{Speakur thread on a mobile phone.}
+\label{f:mobile1}
+\end{figure}
+
+The two main techniques used in Speakur\index{Speakur} for responsive design are CSS\index{CSS} flexible (flex)\index{Flex} boxes~\cite{mozillacontributors2015} 
+and CSS \tcode{@media}\index{@media} rules that apply varied styles to different screen sizes. 
+In addition, Speakur's JavaScript\index{JavaScript} code exposes a \tcode{smallScreen} flag to the HTML templates\index{HTML!templates} that can trigger layout adjustments, 
+such as moving the user photo to a different location.
+
+The desktop version in figure~\ref{f:demo1} shows the user photo to the left of the main post area, 
+but the mobile version in figure~\ref{f:mobile1} shows how the user photo is moved to the right side of the post header. 
+A CSS\index{CSS} \tcode{@media}\index{@media} rule for small screens disables the indentation of replies shown at the bottom of figure~\ref{f:demo1}. 
+The extensive use of CSS flex\index{Flex} box attributes ensures that structural elements like headers and toolbars automatically adjust their layout to available space. 
+This will be described in more detail in section~\ref{sec:responsive}.
 
 \section{Polymer and Web Components}
 As described in Chapter~\ref{ch:background}, 
@@ -108,9 +137,9 @@ to expose certain native browser features in a public, standardized way.
 Polymer\index{Polymer} is a 
 Google\index{Google} 
 web framework built from the ground up around Web Components.
-Polymer also provides the crucial Web Component 
+Polymer also provides the crucial 
 polyfill\index{polyfill} library 
-that is required for these features to work on most current browsers.
+that is required for Web Component features to work on most current browsers.
 
 In general, Speakur tries to adhere to the core principles laid out by the 
 Web Components\index{Web Components} developers 
@@ -134,12 +163,13 @@ because they are applicable to software engineering\index{software engineering} 
 \end{enumerate}
 \end{quote}
 
-Explain how I follow those guidelines... [TODO]
+% Explain how I follow those guidelines... [TODO]
+% Will be explained in ch 4 and 5, should I mention that here? probably not
 
 The Polymer project provides two (optional) libraries of Custom Elements\index{Custom Elements} for use in your own projects. 
 \textbf{Core Elements}\index{Core Elements} includes both user interface\index{user interface (UI)}
 widgets and invisible functional elements.
-Core Elements are minimally styled and can be used standalone, 
+Core Elements are minimally styled and can be used directly, 
 but they are also used as `base classes' for 
 \textbf{Paper Elements}\index{Paper Elements}, 
 which implement the so-called `Material Design'\index{Material Design} look and feel (design language) used by apps for Google's\index{Google} Android\index{Android} mobile\index{mobile} operating system~\cite{imura2015}.
@@ -148,65 +178,107 @@ Core and Paper Elements,
 and Speaker's own custom elements that are used to abstract\index{abstraction} internal implementation details.
 
 \section{Data store and synchronization}
-All persistent data in Speakur is stored in a cloud database called Firebase~\cite{firebasecontributors2015}\index{Firebase}.
+All persistent data in Speakur is stored in a cloud database\index{database} called Firebase~\cite{firebasecontributors2015}\index{Firebase}.
 Anyone who wants to use Speakur\index{Speakur} can register for a free account on \tcode{firebase.com} and create a database instance to hold Speakur data.
 No other server component is required.
 Firebase is a NoSQL\index{NoSQL}-style key-value data store of the kind that has been popularized
 with the growth of 
 Node.js\index{Node.js}, a server-side JavaScript\index{JavaScript} environment,
-and the MongoDB\index{MongoDB} NoSQL database~\cite{dickey2014}.
+and the MongoDB\index{MongoDB} NoSQL\index{NoSQL} database\index{database}~\cite{dickey2014}.
 
 Firebase\index{Firebase} provides WebSockets\index{WebSockets}-based event notification and synchronization 
 as well as a security rule description format based on 
-JSON\index{JSON}\footnote{JavaScript Object Notation (JSON)\index{JSON} is a popular alternative to XML because it is more easily human-readable. 
+JSON\index{JSON}\footnote{JavaScript Object Notation (JSON)\index{JSON} is a popular data format because it's easily human-readable, 
+but its free-form structure compared to XML\index{XML} can be both a blessing and a curse.  
 It mirrors the syntax for writing data structure literals in the JavaScript\index{JavaScript} language.} 
 for securing\index{security} and validating user actions.
 The use of Firebase as the only server component allows for easy deployment of Speakur with minimal dependencies, helping to keep the component small and focused.
 
-\subsection{Firebase API}
-Firebase\index{Firebase} can be used `standalone' as the sole provider of data services to an application, as Speakur does, or else it can be used as an auxiliary to other services or REST\index{REST} APIs\index{API}.
+\subsection{RESTful API}
+Firebase\index{Firebase} can be used by itself as the sole provider of data services to an application, as Speakur does, or else it can be used as an auxiliary to other services or REST\index{REST} APIs\index{API}.
 One of the key architectural benefits of using Firebase, 
 besides its ease of deployment, 
 is that its data binding and event notification system allows for 
 applications to respond to changes in real-time while remaining performant.
 
-Firebase itself provides a REST API for data access by programs like Speakur.
+Firebase\index{Firebase} itself provides a REST\index{REST} API\index{API} for data access by programs like Speakur.
 The term REST or RESTful is sometimes misunderstood,
 but in Roy Fielding's original 2000 Ph.D. thesis, 
-REST refers to transferring \textit{representations} of application state and using hypertext as the engine of 
-application state\index{HATEOAS}\footnote{Known under the somewhat awkward acronym of HATEOAS\index{HATEOAS}.}.
+REST\index{REST} refers to transferring \textit{representations} of application state and using hypertext as the engine of 
+application state\index{HATEOAS}\footnote{Known under the somewhat awkward acronym of HATEOAS\index{HATEOAS}.}~\cite{fielding2000}.
 Specifically, `objects' of whatever type are represented as interlinked hypertext \textbf{\textit{resources}} that are operated on by standard HTTP verbs\index{HTTP!verbs} such as PUT\index{HTTP!PUT} and DELETE\index{HTTP!DELETE}.
+
+For example, in a Speakur\index{Speakur} thread, a particular user comment (post) is an abstract \textit{resource} located at the following uniform resource locator (URL):
+
+\tcode{https://YOUR-DB.firebaseio.com/posts/\$ParentId/\$PostId}
+
+%\tcode{/posts/\$ParentId/\$PostId}
+
+where \tcode{\$PostId} is an identifier (id) for the post itself, and \tcode{\$ParentId} is the id of the post this is a reply to, 
+which could be the top-level post (thread id.) 
+In order to delete this post, one would issue an HTTP\index{HTTP} request to this URL with the \tcode{DELETE}\index{HTTP!DELETE} verb, as in this \tcode{bash} shell script snippet:
+
+\begin{lstlisting}[language=bash,numbers=none,caption=
+{Deleting a post with the REST API.},label=l:rest_delete,captionpos=below]
+set DATABASE="https://my-firebase.firebaseio.com"
+set POST="fake_post_id"  # the post to delete
+set PARENT="parent_post_or_thread_id"
+
+curl --request DELETE $DATABASE/posts/$PARENT/$POST
+\end{lstlisting}
+\index{curl}\index{HTTP!DELETE}
+
+Of course, the server would be expected to check your authorization to delete this resource.
+Viewing (reading) the post is done with a simple \tcode{GET}\index{HTTP!GET} request.
+Creating a brand new post can be done with \tcode{PUT}\index{HTTP!PUT}.
+Updating an existing post's text is done with \tcode{POST}\index{HTTP!POST}.
+By default, the resources are \textit{represented} as JSON\index{JSON} encoded data, 
+but a client can request an alternative representation such as XML\index{XML}.
+The storage format for the resource `at rest' in the server database is irrelevant from the API\index{API} perspective.
 
 Areas where typical web APIs\index{API} fall short of being truly ``REST-ful''\index{REST} include:
 \begin{enumerate}
 \item Treating URLs as endpoints for remote procedure calls (RPC\index{RPC}) instead of hypertext resources that are interlinked in exactly the same way a website is like a tree that starts from the home page and links to various resources.
-\item Using HTTP verbs\index{HTTP!verbs} inappropriately, such as using POST for all actions including deletion.
-\item Not using content related HTTP headers\index{HTTP!headers} appropriately for data representation and API versioning\index{versioning}~\cite{steveklabnik2011}.
+\item Not closely following HTTP semantics, especially using HTTP verbs\index{HTTP!verbs} inappropriately like using \tcode{POST}\index{HTTP!POST} for all actions including deletion.
+\item Not using content related HTTP headers\index{HTTP!headers} appropriately for data representations and API\index{API} versioning\index{versioning}~\cite{steveklabnik2011}.
 \end{enumerate}
 
-The Firebase API follows typical RESTful\index{REST} patterns in data access, allowing the database and its metadata to be addressed as a set of linked HTTP resources.
+The Firebase\index{Firebase} API\index{API} follows typical RESTful\index{REST} patterns in data access, allowing the database\index{database} 
+and its metadata\index{metadata} to be addressed as a set of linked HTTP resources.
 In addition, Firebase client libraries use WebSockets\index{WebSockets}, 
-a lower-level TCP/IP protocol, 
+a lower-level TCP/IP\index{TCP/IP} protocol, 
 to perform event notification and distributed synchronization without the overhead of polling or high-overhead HTTP 1.1\index{HTTP} requests.
-WebSockets\index{WebSockets} are used for performance reasons but all of the data in Firebase\index{Firebase} (and hence, in Speakur\index{Speakur}) is accessible from the RESTful\index{REST} HTTP API\index{API} outside of a WebSocket\index{WebSockets}.
+WebSockets\index{WebSockets} are used to enhance performance but all of the data in Firebase\index{Firebase} 
+(and hence, in Speakur\index{Speakur}) 
+is accessible from the RESTful\index{REST} HTTP API\index{API} outside of a WebSocket\index{WebSockets}.
 
 \subsection{WebSockets}
 \label{sec:websockets}
-The WebSockets\index{WebSockets} protocol, formally known as RFC 6455\index{RFC 6455}, is a TCP/IP\index{TCP/IP} protocol that can be used alongside HTTP\index{HTTP} for persistent data connections between web clients and servers~\cite{mozillacontributors2015-a}.
-The primary purpose is to avoid the overhead of initiating a new HTTP connection to check on the status of something on the server, also known as polling\index{polling}.
-Firebase\index{Firebase} uses Web Sockets rather than traditional high-overhead HTTP\index{HTTP} requests to move data back and forth to the client.
+The WebSockets\index{WebSockets} protocol, formally known as RFC 6455\index{RFC 6455}, 
+is a TCP/IP\index{TCP/IP} protocol that can be used alongside HTTP\index{HTTP} for persistent data connections between web clients and servers~\cite{mozillacontributors2015-a}.
+Its primary purpose is to avoid the overhead of having the client initiate a new HTTP connection to check on the status of something on the server, also known as polling\index{polling}.
+Aside from the fact that an HTTP\index{HTTP} connection can be `upgraded' (protocol switched) to WebSockets,
+there is no direct connection or dependency between HTTP and WebSockets.
+They can be used independently.
+
+Firebase\index{Firebase} uses WebSockets\index{WebSockets} rather than traditional high-overhead HTTP\index{HTTP} requests to move data back and forth to the client.
 This always-on connection allows for sending nearly instant event notifications to all currently active clients with minimal overhead.
 In practice, this allows the application to update its state in real-time as different users read and write values the database.
 The Firebase client library 'subscribes' to an area of interest in the database, such as the replies to a particular thread, and receives notifications when these areas change and updates the local representation as appropriate.
 
 \section{Security}
-Because Speakur\index{Speakur} relies entirely on Firebase\index{Firebase} for data persistence, that means its security model is largely built around Firebase. 
+\label{sec:arch_security}
+Because Speakur\index{Speakur} relies entirely on Firebase\index{Firebase} for data persistence, its security\index{security} model is tied heavily to Firebase capabilities. 
 All Speakur code runs inside the client's web browser including the small `admin' mode.
-The security architecture\index{architecture} of the web is largely based around protecting the \textit{user} from malicious servers and other users, not protecting the \textit{server} from the user.
-The server has to take its own steps to protect itself from unauthorized actions.
-Speaker has no 'server' as such other than the Firebase cloud service.
-That means the security mechanisms that do things like prevent users from deleting each other's posts are implemented entirely within Firebase security rules as discussed in section~\ref{sec:security}.
-Confidentiality of data in-transit is handled with the same Transport Layer Security (TLS)\index{transport layer security (TLS)} better known as the secure socket layer (SSL)\index{secure socket layer (SSL)} or HTTPS\index{HTTP!HTTPS}.
+The security architecture\index{architecture} of the web is for the most part about protecting the \textit{user} from malicious servers (and other users), not protecting the \textit{server} from the user.
+It is assumed that servers protect themselves from unauthorized actions.
+Because Speaker\index{Speakur} has no `server' as such, 
+other than the Firebase cloud service,
+that means the security mechanisms that do things like prevent users from deleting each other's posts 
+must be implemented entirely within Firebase security rules.
+This is discussed in more detail in section~\ref{sec:security}.
+Confidentiality of in-transit data is handled with the same Transport Layer Security (TLS)\index{transport layer security (TLS)}, 
+better known as the secure socket layer (SSL)\index{secure socket layer (SSL)} or HTTPS\index{HTTP!HTTPS}.
 
 Firebase implements the two major categories of access control: authentication\index{authentication} and 
 authorization\index{authorization}. 
@@ -224,20 +296,102 @@ Site owners who use Speakur can also designate certain threads to allow anonymou
 
 Every user who registers within a Speakur\index{Speakur} instance by signing in with one of those identity providers gets a unique identifier --- the \tcode{uid} or user ID. 
 This \tcode{uid} is used extensively in the database to refer to the user, including in the security (authorization\index{authorization}) rules that are external to the actual database (i.e, security metadata\index{metadata}.) 
+Thread owners also have the option of allowing anonymous posts by users who are not signed in.
 
 \subsection{Authorization}
-Authorization\index{authorization} rules determine what level of access a user has within the system, or what they are allowed to do or see.
+Authorization\index{authorization} security\index{security} rules determine what level of access a user has within the system and what they are allowed to do or see.
+Speakur's\index{Speakur} actual rules are described in greater detail in section~\ref{sec:security}.
+The set of security rules for a Speakur database is contained in a JSON\index{JSON} encoded file that contains expressions that determined whether a given database read or write (change) is allowed. 
+For example, Speakur has defined security rules which prohibit anyone from editing or deleting an existing post unless they are the original post author or an authorized administrator.
+Here is an excerpt for the \tcode{posts} resource from the security rules file:
 
+\begin{lstlisting}[language=JavaScript,numbers=none,caption=
+{Security rule for posts (user messages).},label=l:sec_rule1,captionpos=below]
+"posts": {
+  ".read": true, // anyone can read posts
+  ".write": false,  // deny modification by default
+
+  "$parentId": {
+    "$childId": {
+      // must be admin or post owner to modify a post.
+      ".write": "data.exists() ? ( auth.uid === data.child('author').child('uid').val() || root.child('admins').child(auth.uid).child('scope').val() === '*' ) : true",
+      
+      // validate structure of new posts
+      ".validate": "newData.hasChildren(['threadId', 'text', 'author']) && newData.child('timestamp').val() > 1"
+    }
+  }
+}
+\end{lstlisting}
+
+This rule structure is dictated by the architecture\index{architecture} of Firebase\index{Firebase}.
+As seen in listing~\ref{l:sec_rule1} above, this setup has certain pros and cons. 
+On one hand, it's logically designed and the expressions provide a powerful and fairly comprehensive way to specify the 
+security\index{security} and authorization\index{authorization} logic for your database.
+On the other hand, non-trivial rule expressions can get awkwardly long and in complex cases can devolve into a maze of nested ternary operators.
+One big file with all the JSON formatted security expressions needed for a database works great for simpler cases but may become unwieldy in a more complex application.
+
+% Move the above to the analysis section?
 
 \section{Data Flow and Event Handling}
+One important area of Speakur's architecture is the flow of data within the system and responding asynchronously\index{asynchronous} to local and remote user events.
+To understand the general flow of information in Speakur (and Polymer\index{Polymer}), imagine the component as an inverted tree, with the `root' at the top 
+In this model, information flows \textit{down} through data bindings and bubbles \textit{up} through events.
 
-\subsection{Mutation Observers}
+As mentioned in section~\ref{sec:bgmutation}, 
+DOM\index{DOM} mutation observers\index{mutation observers} are a standard way to register a callback to be run when some area of the page (DOM) changes. 
+A callback in this case is a function that reacts to a change in some other part of the system.
 
-\section{Dependencies and Deployment}
+TODO more here...
 
-Bower\index{Bower}
+\section{Deployment}
+Speakur\index{Speakur} is designed to be easy to deploy\index{deployment}.
+Adding a discussion forum to a blog or web app is as simple as altering the page to:
 
-Vulcanize\index{Vulcanize}
+\begin{enumerate}
+\item load Polymer's\index{Polymer} Web Components\index{Web Components} polyfill\index{polyfill},
+\item import the \tcode{<speakur-discussion>}\index{<speakur-discussion>} element,
+\item then place \tcode{<speakur-discussion>}\index{<speakur-discussion>} on the page at the desired location.
+\end{enumerate}
 
-CORS\index{Cross-origin resource sharing (CORS)}
+This process is discussed further in section~\ref{publishing}. 
 
+Because steps 1 and 2 above can load these resources from an external service or content delivery network\index{content delivery network (CDN)},
+Speakur does not require installing any software to the web host serving the blog/app.
+The HTML\index{HTML}, CSS\index{CSS}, and JavaScript\index{JavaScript} files, plus associated resources like images and JSON\index{JSON} language files, 
+can all be loaded from a different web host. 
+This is known as cross-origin resource sharing, or CORS\index{Cross-origin resource sharing (CORS)}.
+Speakur\index{Speakur} avoids a common security restriction associated with CORS known as Same-Origin Policy\index{Same-Origin Policy}, which is used to prevent a class of attacks called Cross-site Request Forgery (CSRF)~\cite{mozillacontributors2015-b}.
+It does this by relying entirely on Firebase for live data,
+which in turn uses WebSockets\index{WebSockets},
+which are not subject to Same-Origin Policy\index{Same-Origin Policy} restrictions.
+This allows Speakur to be used on a site without that site having installed a copy of its files.
+
+\subsection{Dependencies}
+Like most applications, Speakur\index{Speakur} relies heavily on other libraries and frameworks to implement some of its underlying behaviors. 
+Some of these libraries in turn depend on other libraries.
+Collectively, all of the 3rd party modules required to run Speakur\index{Speakur} are called \textit{dependencies}\index{dependencies}.
+For example, safe HTML rendering of user-supplied Markdown-style text is handled by the excellent Marked library\index{Marked library}~\cite{christopherjeffrey2014}.
+See Appendix 2 for the full list of Speakur's\index{Speakur} direct dependencies.
+
+Taking advantage of the de-duping\index{de-duping} feature of HTML Imports\index{HTML!Imports}
+requires that you name the path to your resources and dependencies in a consistent fashion.
+In other words, if component A and component B both require component Z, both A and B must use the same URL when requesting (importing) component Z.
+Furthermore, each of these dependencies must also follow this same pattern when importing their own dependencies.
+Therefore Speakur follows the recommendation of the Polymer\index{Polymer} framework and uses Bower\index{Bower} to manage dependencies~\cite{bowercontributors2015}. 
+Speakur only has to list which packages it needs, either by name or their Git\index{Git} repository address, 
+and Bower\index{Bower} handles downloading these to a managed component directory alongside Speakur itself.
+
+\subsection{Vulcanize}
+One possible `problem' with adopting Web Components\index{Web Components} architecture\index{architecture} is that it encourages the partition of a large application into numerous smaller components or files.
+Of course, that is really a \textit{feature} designed to enhance code organization, encapsulation\index{encapsulation} and productivity, 
+but it has one important side effect: 
+under the HTTP\index{HTTP} 1.1 protocol that powers the web, each small component requires a separate request which degrades page loading times.
+Techniques like \tcode{Keep-Alive} headers can help, and the forthcoming HTTP 2.0\index{HTTP!HTTP 2.0} will address this question more comprehensively.
+
+In the meantime, the Polymer\index{Polymer} project provides a tool called Vulcanize\index{Vulcanize} which concatenates and minifies\index{minify} your web components into a single file.
+Concatenation puts all of the required text resources (HTML, CSS, and JS) into a 
+single\footnote{Except when Content Security Policy (CSP)\index{content security policy (CSP)} requires enforced separation of HTML, CSS, and JS. In this case, three files are used.}
+file to reduce the number of HTTP\index{HTTP} requests.
+Minification\index{minify} removes all comments, whitespace and non-essential elements from the code to compact it and reduce transfer times.
+Whether using Vulcanize results in an overall faster site ultimately depends on a number of factors including how and when the components are used.
+For that reason, empirical testing is needed to know whether it should be used in production on a real site~\cite{polymercontributors2015-a}.
