--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -651,4 +651,13 @@ Named for the Vulcanization process that turns polymers into more durable materi
 	month = dec,
 	year = {2014},
 	howpublished = {https://github.com/chjj/marked}
+},
+
+@online{polymercontributors2015-b,
+	title = {Data binding overview},
+	url = {https://www.polymer-project.org/0.5/docs/polymer/databinding.html},
+	author = {Polymer contributors},
+	month = feb,
+	year = {2015},
+	howpublished = {https://www.polymer-project.org/0.5/docs/polymer/databinding.html}
 }
