--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -367,7 +367,7 @@ Web Components are a proposed World Wide Web Consortium (W3C) standard for writi
 This report reviews Web Component technologies and provides a case study for structuring a real-world WC applet that is embedded in a larger app or system.
 The major research question is whether W3C Web Components provide a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
 In other words, \textit{are components really the future of the web}? 
-Subsidiary topics include assessing the maturity and suitability of current Web Components technologies for widespread deployment and the efficient synchronization of component state across distributed networks.
+Subsidiary topics include assessing the maturity and suitability of current Web Components technologies for widespread deployment and live synchronization of user interface state.
 
 
 \tableofcontents   % Table of Contents will be automatically
