--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -11,8 +11,8 @@ and Netscape Navigator\index{Netscape Navigator}.
 
 As of early 2015, modern web apps are typically written with a JavaScript\index{JavaScript} framework that provides a cohesive set of structures, design patterns and practices designed to facilitate composing web applications 
 --- large or small --- 
-from a number of sub-components.
-Angular\index{Angular}, Meteor\index{Meteor}, and Backbone\index{Backbone} are three such frameworks~\cite{dickey2014}.
+from a number of sub-components~\cite{dickey2014}.
+Angular\index{Angular}, Meteor\index{Meteor}, and Backbone\index{Backbone} are three such frameworks.
 The difference between a `framework'\index{Framework} and a library is somewhat arbitrary, but typically frameworks are more comprehensive than narrowly focused utility libraries.
 Yet all frameworks must exist within the confines of the programming model provided by the browser and the Document Object Model (DOM)\index{DOM}. 
 In this model, the entire web page or app belongs to a single `document', constituent parts are not encapsulated\index{encapsulation} or isolated from each other, and authors are limited to working with the predefined HTML tags.
@@ -97,7 +97,7 @@ Figure~\ref{f:html5video} illustrates how this works. It shows the shadow (inter
 \begin{figure}[htb]
 \centering
  \includegraphics[width=5.5in]{images/html5_video_control.png}
-\caption{Opera's shadow DOM for \tcode{<video>}\index{<video>} highlighting the Play button}
+\caption{Opera's\index{Opera} shadow DOM for \tcode{<video>}\index{<video>} highlighting the Play button}
 \label{f:html5video}
 \end{figure}
 
@@ -227,8 +227,7 @@ is \textbf{not} a part of the standard HTML5\index{HTML!HTML5} template spec.
 The following example of a data bound template is something that does \textit{not} work with plain Web Components alone:
 
 \begin{lstlisting}[language=HTML5,
-caption={An example of a data-bound template.},
-captionpos=below,
+caption={An example of a data-bound template.},label=l:dbtemplate,captionpos=below,
 numbers=none]
 	<template> 
 		The temperature is {{ temp }} in {{ city }} right now.
