--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -59,7 +59,7 @@
 	% links
 	<a, </a,
   % More tags...
-  <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <template, </template, <my-element, </my-element,
+  <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe, </video, <image, </image>, <template, </template, <my-element, </my-element,
   <speakur-discussion, </speakur-discussion, <twbs-navbar, </twbs-navbar
   },
   ndkeywords={
