--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -183,8 +183,7 @@ These files constitute an \textit{HTML Import}\index{HTML!Imports} package that 
 custom HTML element\index{Custom Elements} for the use of web authors in their own pages.
 An example of using \tcode{<speakur-discussion>} is given in Chapter 3 and in briefly in Listing~\ref{l:example1} below.
 
-\begin{lstlisting}[language=HTML5,numbers=none,caption=
-{Example of the Speakur custom HTML element},label=l:example1,captionpos=below]
+\begin{lstlisting}[language=HTML5,caption={Example of the Speakur custom HTML element},label=l:example1]
  <!-- place this on your page
       where you want a discussion -->
  <speakur-discussion
