--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -67,6 +67,7 @@
   =,
   % HTML attributes
   charset=, src=, id=, width=, height=, style=, type=, rel=, href=,
+  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=,
   % SVG attributes
   fill=, attributeName=, begin=, dur=, from=, to=, poster=, controls=, x=, y=, repeatCount=, xlink:href=,
   % CSS properties
@@ -86,6 +87,8 @@
   % line-numbers
   xleftmargin={0.75cm},
   numbers=left,
+  numberstyle=\scriptsize,
+  captionpos=below,
   stepnumber=1,
   firstnumber=1,
   numberfirstline=true,	
