--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -34,6 +34,12 @@
 
 \usepackage{url}		% Allows good typesetting of web URLs.
 
+\usepackage{booktabs}  % table formatting
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+%\usepackage{float}
+%\restylefloat{table}
+
+
 \usepackage[backend=biber,url=false,citestyle=numeric,firstinits=false]{biblatex}
 \usepackage{citesort}         	% 
 
